...
                android:id="@+id/StatsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
                android:layout_marginTop="24dp"
                android:text="Statistika"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
...

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/categoriesStats2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
                android:background="@drawable/round_fragment_corners"
...
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <LinearLayout
                        android:id="@+id/linear_layout_container3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="4dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textCategories2"
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:layout_weight="3"
                        android:text="Kategorijos"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/categoryButton"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_button_background"
                        android:text="Daugiau"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black" />

                    </LinearLayout>

                    <include
                        layout="@layout/pie_graph_layout"
                        android:id="@+id/piegraphlayout"
                        android:layout_width="match_parent"
                        android:layout_height="427dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
...

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/apphistoryStats2"
                android:layout_width="match_parent"
                android:layout_height="507dp"
                android:layout_marginTop="22dp"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
                android:layout_marginBottom="22dp"
...
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <LinearLayout
                        android:id="@+id/linear_layout_container4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="4dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/appHistoryStats2"
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:layout_weight="3"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:text="Naudojimo istorija"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/appHistoryButton"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/appHistoryButton"
...
