<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/StatsName"
                android:layout_width="343dp"
                android:layout_height="40dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="24dp"
                android:text="Naudojimo istoriija"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/categoriesStats2"
                android:layout_width="317dp"
                android:layout_height="540dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/round_fragment_corners"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/StatsName">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <LinearLayout
                        android:id="@+id/linear_layout_apps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="4dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textCategories2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.7"
                        android:text="Naudojimo istorija"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/appUsageButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="32dp"
                        android:background="@drawable/round_button_background"
                        android:text="Keisti datą"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textDateCategories2"
                        android:layout_width="150dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="12dp"
                        android:text="No date is displayed"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linear_layout_apps" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="287dp"
                        android:layout_height="427dp"
                        android:layout_marginTop="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textDateCategories2" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="27dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="27dp" />

</androidx.constraintlayout.widget.ConstraintLayout>